--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -2,6 +2,12 @@
   background-image: url("https://s3.amazonaws.com/codecademy-content/programs/freelance-one/broadway/images/the-flatiron-building.png");
   text-align: center;
 }
+.footer{
+  background-color: dimgray;
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+}
 h1{
   font-family: Helvetica;
   font-size: 70 px;
