link style changed to mockboard style

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,11 @@
   font-size: 11px;
   color: white;
 }
+a{
+  font-family: Helvetica;
+  font-size: 18px;
+  color: white;
+}
 h1{
   font-family: Helvetica;
   font-size: 70 px;
