correction of html and style in portfolio, team and contact section

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -33,3 +33,9 @@ h2{
   font-family: Helvetica;
   font-size: 14px;
 }
+.background h2{
+  font-family: Helvetica;
+font-size: 23px;
+font-weight: bold;
+color: white;
+}
